--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Update pubspec.yaml for build
-        run: sed -i "s/version: .*/version: ${{ needs.calculate-version.outputs.new_version }}/" pubspec.yaml
+        run: |
+          sed -i "s/version: .*/version: ${{ needs.calculate-version.outputs.new_version }}/" pubspec.yaml
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
